--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tippyjs/react": "^4.2.5",
+    "apexcharts": "^3.27.3",
     "next": "latest",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-query": "^3.19.0"
   },
